[gd_scene load_steps=2 format=3 uid="uid://game_over_screen"]

[ext_resource type="Script" path="res://coop/scripts/game_over_screen.gd" id="1_game_over"]

[node name="GameOverScreen" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_game_over")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 48
text = "üíÄ GAME OVER"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "All Players Have Fallen"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="StatsTitle" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üìä Final Statistics"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Control/Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="EnemiesKilledLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚öîÔ∏è Enemies Defeated: 0"
horizontal_alignment = 1

[node name="CoinsCollectedLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üí∞ Coins Collected: 0"
horizontal_alignment = 1

[node name="WaveReachedLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üåä Wave Reached: 1"
horizontal_alignment = 1

[node name="TimeSurvivedLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚è±Ô∏è Time Survived: 0:00"
horizontal_alignment = 1

[node name="DamageDealtLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üí• Total Damage Dealt: 0"
horizontal_alignment = 1

[node name="BossesKilledLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üëπ Bosses Defeated: 0"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RestartButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üîÑ Restart"

[node name="MainMenuButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üè† Main Menu"

